samples/_failures_safe/1761698173_d4b91f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ec764ac.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8ec764ac.c:183:9: error: expected declaration or statement at end of input
  183 |         }
      |         ^
./samples/SAFE/__tmp_8ec764ac.c:183:9: error: expected declaration or statement at end of input
